--- a/public/assets/styles/components/landing-page-two/_slider-container.scss
+++ b/public/assets/styles/components/landing-page-two/_slider-container.scss
@@ -5,6 +5,10 @@
             padding: 30px 0 64px 0;
 
         }
+        // optional color for landing page two
+        .heading-color{
+            color:#3424C2
+        }
        h2{
         font-family: Montserrat;
         font-size: 32px;
@@ -22,6 +26,7 @@
 
         }
        }
+
        .details-container{
 
         display: flex;
